Add css effects, background, padding and footer centering

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="navbar">
-            <div>Header Logo</div>
+            <div id="logo">Header Logo</div>
             <a>Header Link One</a>
             <a>Header Link Two</a>
             <a>Header Link Three</a>
