--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <body>
         <div class="navbar">
             <div id="logo">Header Logo</div>
-            <a>Header Link One</a>
-            <a>Header Link Two</a>
-            <a>Header Link Three</a>
+            <a class="hero-secondary">Header Link One</a>
+            <a class="hero-secondary">Header Link Two</a>
+            <a class="hero-secondary">Header Link Three</a>
         </div>
 
         <div class="herobar">
-            <div>This website is awesome</div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
+            <div class="hero-main">This website is awesome</div>
+            <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
             <button>Sign Up</button>
             <img>
         </div>
 
         <div class="content-container">
-            <div>Some random information.</div>
+            <div id="info-header">Some random information.</div>
             <img>
             <div>this is some subtext under an illustration or image</div>
             <img>
@@ -43,9 +43,11 @@
         </div>
 
         <div class="call-to-action">
-            <div>Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button right over there!</div>
-            <button>Sign up</button>
+            <div class="call-to-action-bar">
+                <div>Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+                <button>Sign up</button>
+            </div>
         </div>
 
         <div class="footer">Copyright © The Odin Project 2021</div>
