--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         </div>
 
         <div class="herobar">
-            <div class="hero-main">This website is awesome</div>
-            <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
-            <button>Sign Up</button>
-            <img>
+            <div>
+                <div class="hero-main">This website is awesome</div>
+                <div class="hero-secondary">This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</div>
+                <button>Sign Up</button>
+            </div>
+            <div>
+                <img src="pexels-stein-egil-liland-3408744.jpg" alt="Snowy aurora" width="320" height="204">
+            </div>
         </div>
 
         <div class="content-container">
