Add pictures, cropped and references to the content section

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 <button>Sign Up</button>
             </div>
             <div>
-                <img src="pexels-stein-egil-liland-3408744.jpg" alt="Snowy aurora" width="320" height="204">
+                <img src="images/pexels-stein-egil-liland-3408744.jpg" alt="Snowy aurora" width="320" height="204">
             </div>
         </div>
 
         <div class="content-container">
             <div id="info-header">Some random information.</div>
-            <img>
+            <img class="small-img" src="images/pexels-stefan-stefancik-91216.jpg" alt="aurora cabin" width="160px" height="107px">
             <div>this is some subtext under an illustration or image</div>
-            <img>
+            <img class="small-img" src="images/pexels-stein-egil-liland-1933319.jpg" alt="aurora landscape" width="160px" height="107px">
             <div>this is some subtext under an illustration or image</div>
-            <img>
+            <img class=small-img src="images/pexels-stein-egil-liland-3081835.jpg" alt="aurora bay area" width="160px" height="107px">
             <div>this is some subtext under an illustration or image</div>
-            <img>
+            <img class="small-img" src="images/auroracabin.jpeg" alt="aurora cabin" width="160px" height="107px">
             <div>this is some subtext under an illustration or image</div>
         </div>
 
