Add divs to content container and add styling

--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
 
         <div class="content-container">
             <div id="info-header">Some random information.</div>
-            <img class="small-img" src="images/pexels-stefan-stefancik-91216.jpg" alt="aurora cabin" width="160px" height="107px">
-            <div>this is some subtext under an illustration or image</div>
-            <img class="small-img" src="images/pexels-stein-egil-liland-1933319.jpg" alt="aurora landscape" width="160px" height="107px">
-            <div>this is some subtext under an illustration or image</div>
-            <img class=small-img src="images/pexels-stein-egil-liland-3081835.jpg" alt="aurora bay area" width="160px" height="107px">
-            <div>this is some subtext under an illustration or image</div>
-            <img class="small-img" src="images/auroracabin.jpeg" alt="aurora cabin" width="160px" height="107px">
-            <div>this is some subtext under an illustration or image</div>
+            <div>
+                <img class="small-img" src="images/pexels-stefan-stefancik-91216.jpg" alt="aurora cabin" width="160px" height="107px">
+                <div class ="small-img-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <img class="small-img" src="images/pexels-stein-egil-liland-1933319.jpg" alt="aurora landscape" width="160px" height="107px">
+                <div class ="small-img-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <img class=small-img src="images/pexels-stein-egil-liland-3081835.jpg" alt="aurora bay area" width="160px" height="107px">
+                <div class ="small-img-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div>
+                <img class="small-img" src="images/auroracabin.jpeg" alt="aurora cabin" width="160px" height="107px">
+                <div class ="small-img-text">this is some subtext under an illustration or image</div>
+            </div>
         </div>
 
         <div class="quote-container">
