--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
 
         <div class="quote-container">
-            <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div>-Thor, God of Thunder</div>
+            <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+            <cite>-Thor, God of Thunder</cite>
         </div>
 
         <div class="call-to-action">
