--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 
         <div class="call-to-action">
             <div class="call-to-action-bar">
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
-                <button>Sign up</button>
+                <div id="call-to-action-text">
+                    <div id="call-to-action-title">Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="call-to-action-button">Sign up</button>
             </div>
         </div>
 
