--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                     <div id="call-to-action-title">Call to action! It's time!</div>
                     <div>Sign up for our product by clicking that button right over there!</div>
                 </div>
-                <button class="call-to-action-button">Sign up</button>
+                <div class="button-container">
+                    <button class="action-button">Sign up</button>
+                </div>
             </div>
         </div>
 
